# nextdns-prometheus-exporter

./: README.md  prometheus-nextdns.py  pyproject.toml
.github/workflows/: docker-image.yml
docker/: Dockerfile  Makefile  prometheus-nextdns-exporter.py  prometheus_nextdns_exporter.py  requirements.txt
kubernetes/: Makefile  deployment.yml  namespace.yml  secret.yml  service.yml
systemd/: nextdns-prometheus-exporter.service
