[tool.poetry]
name = "nextdns-prometheus-exporter"
version = "0.1.0"
description = "Prometheus Exporter for NextDNS.io"
authors = ["Mark Mercado <mamercad@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
