[tool.poetry]
name = "nextdns-prometheus-exporter"
version = "0.1.0"
description = "Prometheus Exporter for NextDNS"
authors = ["Mark Mercado <mamercad@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
prometheus-client = "^0.14.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
